--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.3.0",
     "classnames": "^2.5.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.1",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
     "react-select": "^5.8.1",
     "sass": "^1.78.0",
+    "socket.io-client": "^4.8.1",
     "swiper": "^11.1.14"
   },
   "devDependencies": {
